# fSGM

./: calc_cost.m  calc_cost_coloc.m  calc_cost_pyd.c  calc_cost_pyd.mexw64  calc_cost_sgm.cpp  calc_cost_sgm.mexw64  calc_cost_sgm_ng.cpp  calc_cost_sgm_ng.mexw64  calc_disp_from_first.m  calc_pyd_cost_sgm.c  calc_pyd_cost_sgm.cpp  calc_pyd_cost_sgm.mexw64  calc_pyd_cost_sgm_ng.c  calc_pyd_cost_sgm_ng.cpp  calc_pyd_cost_sgm_ng.mexw64  census.m  common.cpp  common.h  epipolar_geometry.m  epipolar_sgm_of.m  estimate_Fmatrix.m  flow_field.m  forward_backward_check.m  mono_vo.m  ng_sgm.m  pyramidal_sgm.m  read_calib_file.m  rotation_motion.m  scanline_in_fill.m  sgm.m  sgm2d.m  speckle_filter.m  test.m  test_ngsgm.m  test_psgm.m  vmf.m  vzInd2Disp.m  wta.m
proj/: CMakeLists.txt  Readme.txt
proj/example/: 000000.txt
proj/include/: epi_sgm.h  pyd_sgm.h  utils.h
proj/src/: epi_sgm.cpp  pyd_sgm.cpp  sgmof_main.cpp  test.cpp  utils.cpp
