cmake_minimum_required(VERSION 2.8)
LIST(APPEND CMAKE_PREFIX_PATH "C:/opencv/opencv-3.2.0/build")
include_directories( ${CMAKE_CURRENT_LIST_DIR}/include )
aux_source_directory(${CMAKE_CURRENT_LIST_DIR}/src SGMOF_SRC)
project( SGMOF )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( SGMOF ${SGMOF_SRC} )
target_link_libraries( SGMOF ${OpenCV_LIBS} )